# lexical-analyzer

./: .gitignore  CMakeLists.txt  LexicalAnalyzer.sln  README.md
LexicalAnalyzer/: AutomataState.h  FileManager.h  FiniteAutomata.cpp  FiniteAutomata.h  InputHandler.cpp  InputHandler.h  LexicalAnalyzer.cpp  LexicalAnalyzer.h  LexicalAnalyzer.vcxproj  LexicalAnalyzer.vcxproj.filters  State.h  Token.h  Transition.h  TransitionIdentifier.cpp  TransitionIdentifier.h  TransitionKeyword.cpp  TransitionKeyword.h  TransitionLiteral.cpp  TransitionLiteral.h  TransitionPunctuation.cpp  TransitionPunctuation.h  TranstionLiteral.cpp  TranstionLiteral.h  exmlcode.txt  keywords.txt  main.cpp  operators.txt  punctuators.txt
LexicalAnalyzer/Release/: LexicalAnalyzer.exe.recipe  LexicalAnalyzer.iobj  LexicalAnalyzer.ipdb
LexicalAnalyzer/Release/LexicalAnalyzer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  LexicalAnalyzer.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
LexicalAnalyzer/include/: AutomataState.h  FiniteAutomata.h
LexicalAnalyzer/src/: FiniteAutomata.cpp
LexicalAnalyzer/x64/Debug/: LexicalAnalyzer.exe.recipe  LexicalAnalyzer.ilk  finiteautomata.obj.enc  vc143.idb
LexicalAnalyzer/x64/Release/: LexicalAnalyzer.exe.recipe  LexicalAnalyzer.iobj  LexicalAnalyzer.ipdb
include/: State.h  TokenType.h  Transition.h  TransitionLiteral.h
src/: FileManager.cpp  FiniteAutomata.cpp  Transition.cpp  TransitionLiteral.cpp
(+19 files in other folders)
